--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
                 <button class="de">DE</button>
                 <button class="point">.</button>
                 <button class="slash">/</button>
-                <button class="seven">7</button>
-                <button class="eight">8</button>
-                <button class="nine">9</button>
+                <button class="number seven">7</button>
+                <button class="number eight">8</button>
+                <button class="number nine">9</button>
                 <button class="multiplay">*</button>
-                <button class="four">4</button>
-                <button class="five">5</button>
-                <button class="six">6</button>
+                <button class="number four">4</button>
+                <button class="number five">5</button>
+                <button class="number six">6</button>
                 <button class="subtraction">-</button>
-                <button class="one">1</button>
-                <button class="two">2</button>
-                <button class="three">3</button>
+                <button class="number one">1</button>
+                <button class="number two">2</button>
+                <button class="number three">3</button>
                 <button class="addition">+</button>
-                <button class="doubleZero">00</button>
-                <button class="zero">0</button>
+                <button class="dnumber oubleZero">00</button>
+                <button class="number zero">0</button>
                 <button class="result">=</button>
             </div>
         </div>
