added function in js to calculate tasks

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <button class="number two">2</button>
                 <button class="number three">3</button>
                 <button class="addition">+</button>
-                <button class="dnumber oubleZero">00</button>
+                <button class="number doubleZero">00</button>
                 <button class="number zero">0</button>
                 <button class="result">=</button>
             </div>
