--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<div class="wrapper">
+    <div class="wrapper">
         <div class="calc">
-    
+
             <div class="textSection">
                 <p class="textSection__numbers"></p>
             </div>
@@ -37,11 +37,11 @@
                 <button class="result">=</button>
             </div>
         </div>
-</div>
+    </div>
 
 
 
-    <script src="../main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
